# raz

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark-native.yml  benchmark-template.yml  build-debug.yml  build-release.yml  ci.yml  version-bump.yml
bench/: infra.json
crates/raz/: Cargo.toml
crates/raz-core/: Cargo.toml
crates/raz-core/src/: advisor.rs  cloud.rs  command.rs  config.rs  context.rs  diagram.rs  error.rs  lib.rs  odata.rs  output.rs  suggest.rs
crates/raz-core/src/arm/: aks.rs  appservice.rs  budget.rs  client.rs  deployment.rs  group.rs  keyvault.rs  lock.rs  mod.rs  monitor.rs  network.rs  policy.rs  resource.rs  role.rs  storage.rs  subscription.rs  tag.rs  vm.rs  vnet.rs  wait.rs
crates/raz-core/src/auth/: credential.rs  device_code.rs  managed_identity.rs  mod.rs  sp.rs
crates/raz-core/src/graph/: client.rs  federated_credential.rs  mod.rs  service_principal.rs
crates/raz-core/src/llm/: endpoint.rs  local.rs  mod.rs
crates/raz-tui/: Cargo.toml
crates/raz-tui/src/: app.rs  main.rs
crates/raz/src/: main.rs  schema.rs
crates/raz/src/commands/: account.rs  ad.rs  advise.rs  aks.rs  appservice.rs  budget.rs  cloud.rs  completion.rs  configure.rs  deployment.rs  diagram.rs  extension.rs  group.rs  keyvault.rs  lock.rs  login.rs  logout.rs  mod.rs  monitor.rs  network.rs  policy.rs  resource.rs  rest.rs  role.rs  storage.rs  subscription.rs  suggest.rs  tag.rs  vm.rs  vnet.rs  wait.rs  webapp.rs
crates/raz/wix/: main.wxs
docs/screenshots/: README.md
scripts/: bootstrap-gh-oidc.sh
