# raz — a Rust port of a slice of the Azure CLI (`az` -> `raz`).
#
# Architecture mirrors azure-cli's command-module design (loader/args/custom split,
# command groups, a shared Context, json/table/tsv output). HTTP is done with reqwest
# for a self-contained, stable build. In a production port the ARM client and token
# credential would be backed by `azure_core` (Pipeline + BearerTokenPolicy) and
# `azure_identity` from the vendored azure-sdk-for-rust workspace; the seams in
# raz-core::auth and raz-core::arm are deliberately shaped to allow that swap.
[workspace]
resolver = "2"
members = ["crates/raz-core", "crates/raz", "crates/raz-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

# Shared dependencies are declared once here (azure-sdk-for-rust convention) and
# inherited by member crates via `workspace = true`.
[workspace.dependencies]
raz-core = { path = "crates/raz-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "5"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
async-trait = "0.1"

# TUI stack
ratatui = "0.29"
crossterm = "0.28"
tachyonfx = "0.12"

[profile.release]
opt-level = 2
