# raz — a Rust port of a slice of the Azure CLI (`az` -> `raz`).
# Two front-ends (CLI + TUI) over one core crate. HTTP via reqwest straight to the ARM
# REST API; auth is the OAuth device-code flow against Entra.
[workspace]
resolver = "2"
members = ["crates/raz-core", "crates/raz", "crates/raz-tui"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

# Declared once here, inherited by member crates via `workspace = true`.
[workspace.dependencies]
raz-core = { path = "crates/raz-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
dirs = "5"
open = "5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# TUI stack
ratatui = "0.29"
tachyonfx = "0.12"

[profile.release]
opt-level = 2
