[package]
name = "raz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for raz: context, auth, ARM client, output formatting."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
