[package]
name = "raz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core engine for raz: context, auth, ARM client, output formatting."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
jmespath = { workspace = true }
serde_yaml = { workspace = true }

# Embedded GGUF inference (candle) — opt-in; off by default to keep the lean build/release.
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }

[features]
local-llm = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers"]
