[package]
name = "raz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "raz — a Rust port of a slice of the Azure CLI (login/logout/vnet/vm)."

[[bin]]
name = "raz"
path = "src/main.rs"

[dependencies]
raz-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
